[package]
name = "personality"
version = "0.1.0"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "A game for GMTK game jam 2023 "
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/Personality/"
license = "MIT"
keywords = ["raylib", "games", "html5", "Rust", "videogames", "gmtk", "jam"]

[profile.release]
opt-level = 3

[dependencies]
raylib = "3.7.0"
